--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+}
+.nav-container {
+    display: flex; 
+    justify-content: flex-end;
+    padding: 10px 20px; 
+    background-color: white; 
+  }
+  
+  .nav-button {
+    background-color: white; 
+    color: black; 
+    border: 2px solid black; 
+    border-radius: 4px; 
+    padding: 8px 16px; 
+    margin-left: 10px; 
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  
+    &.active {
+      background-color: black;
+      color: white;
+    }
+
+  }
