adding country codes and email suggestions

--- a/src/app/member-registration/member-registration.component.html
+++ b/src/app/member-registration/member-registration.component.html
@@ -16,14 +16,51 @@
         </kendo-textarea>
 
         <!-- Other Input Fields -->
-        <input *ngIf="field.type !== 'textarea' && field.type !== 'tel'"
+        <input *ngIf="field.type !== 'textarea' && field.type !== 'tel' && field.type!=='email'"
             [type]="field.type"
             [(ngModel)]="formData[field.name]" 
             [name]="field.name"
             (input)="validateField(field.name)" />
 
-        
-        <input *ngIf = "field.type === 'tel'" 
+             <!-- Email Field with Suggestions -->
+        <div *ngIf="field.show && field.type === 'email'" class="email-field-container">
+          <input type="email" [(ngModel)]="formData[field.name]" [name]="field.name" (input)="validateEmail()"
+            (focus)="onEmailFocus()" (blur)="onEmailBlur()" />
+
+          <!-- Email Suggestions Dropdown -->
+          <div *ngIf="showSuggestions && emailSuggestions.length" class="email-suggestions-container">
+            <div *ngFor="let suggestion of emailSuggestions" class="email-suggestion"
+              (mousedown)="selectEmailSuggestion(suggestion)">
+              {{ suggestion }}
+            </div>
+          </div>
+
+          <!-- Error Message (Email) -->
+          <div *ngIf="emailError" class="error-message">
+            Please enter a valid email address
+          </div>
+        </div>
+
+        <!-- Mobile Number Field -->
+        <div *ngIf="field.show && field.type === 'tel'" class="mobile-input-container">
+          <div class="country-selector-wrapper">
+            <div class="country-selector" (click)="toggleCountryDropdown()">
+              <img [src]="getSelectedCountryFlag()" class="selected-flag" *ngIf="selectedCountryCode" />
+              <span>{{ selectedCountryCode || 'Select' }}</span>
+              <span class="dropdown-arrow">▼</span>
+            </div>
+            <div class="country-dropdown" *ngIf="showCountryDropdown">
+              <div *ngFor="let country of countries" class="country-option" (click)="selectCountry(country)">
+                <img [src]="country.flag" class="country-flag" />
+                <span>{{ country.name }} ({{ country.code }})</span>
+              </div>
+            </div>
+          </div>
+          <input type="tel" [(ngModel)]="formData[field.name]" [name]="field.name" pattern="[0-9+()-\s]*"
+            inputmode="tel" (input)="validateMobile()" (keydown) = "restrictMobileInput($event)"/>
+        </div>
+
+        <!-- <input *ngIf = "field.type === 'tel'" 
                 type="tel"
                 [(ngModel)] = "formData[field.name]"
                 [name] = "field.name"
@@ -31,16 +68,14 @@
                 inputmode="numeric"
                 maxlength="10"
                 (input) = "validateMobile()"
-                (keydown) = "restrictMobileInput($event)" />
+                (keydown) = "restrictMobileInput($event)" /> -->
         
         <!-- Validation Error Messages -->
         <div *ngIf="field.name === 'name' && nameError" class="error-message">
           Name can only contain letters (A-Z, a-z)
         </div>
 
-        <div *ngIf="field.name === 'email' && emailError" class="error-message">
-          Please enter a valid email address.
-        </div>
+      
 
         <div *ngIf="field.name === 'mobile' && mobileError" class="error-message">
           Please enter a valid mobile number.
@@ -66,9 +101,11 @@
 
     <div class="form-summary">
       <div *ngFor="let field of sortedFields" class="summary-row">
+        <div *ngIf="field.show === true">
         <i class="material-icons">{{ getMaterialIcon(field.name) }}</i>
         <strong>{{ field.label }}:</strong>
         <span>{{ formData[field.name] || 'N/A' }}</span>
+      </div>
       </div>
     </div>
 
