--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    
 }
 .nav-container {
     display: flex; 
@@ -26,6 +27,18 @@
     }
 
   }
+  
+
   body{
+    background-color: #f5f5f5;
     overflow: hidden;
   }
+
+  
+ .toast-progress {
+  background-color: rgb(255, 255, 255) !important;
+}
+.toast-top-right{
+  top: 70px !important;
+  right: 20px !important;
+}
